# TODOlist

./: .gitignore  CMakeLists.txt  List.cpp  List.h  ToDoElement.cpp  ToDoElement.h  ToDoList.cpp  ToDoList.h  ToDoListManager.cpp  ToDoListManager.h  main.cpp
files/: a  todo.txt
unit_testing/: CMakeLists.txt  test_ToDOElement.cpp  test_ToDoList.cpp  test_ToDoManager.cpp
